# cudacnn

./: .hgignore  CMakeLists.txt  README.md  cnnconfig.h.cmake  cudacnn.sln  cudacnn.vcproj  cudacnnPCHSupport.cmake  cudacnn_v10.sln  cudacnn_v10.vcxproj
CMake/: FindMatlab.cmake  findMatlab.cmake
demos/: mnist_datareader.m  norb_datareader.m  norb_gui.m  norb_tool.m  test_norb.m  train_mnist.m  train_norb.m  train_norb_stereo.m
demos/Matlab/: mitfaces_datareader.m  mnist_datareader.m  mnist_gui.m  preproc_mnist_data.m  train_faces.m  train_mnist.m  train_norb.m
include/: clayer.h  clayer_cuda.h  cnnconfig.h  cnnlimits.h  common.h  conv_net.h  cudacnn.h  exceptions.h  flayer.h  flayer_cuda.h  hdf5_helper.h  layer.hpp  matlab_import_export.h  matlab_tools.h  performance_functions.h  player.h  player_cuda.h  tensor.h  tensor_cuda.h  trainer.h  transfer_functions.h  transfer_functions_cu.h  utils.cuh
libcudacnn/: .hgignore  CMakeLists.txt  Makefile  cudacnn.vcproj  cudacnn.vcxproj
libcudacnn/src/: clayer.cpp  cudacnn.cpp  exceptions.cpp  flayer.cpp  hdf5_helper.cpp  player.cpp  precomp.cpp  precomp.hpp  tensor.cpp
libcudacnn/src/cuda/: clayer_cuda.cu  flayer_cuda.cu  player_cuda.cu
m_files/: ConvertTo10Format.m  ConvertTo20Format.m  cnn_gui.m  mnist_gui.m  mse.m  readMNIST.m  save_cnet08_to_hdf5.m  train_mnist.m  train_norb.m  validate_trainer.m
m_files/@cnn/: cnn.m  save.m  show.m  sim.m  train.m  validate.m
mexFunction/: CMakeLists.txt  cnnconfig.h  cudacnnMex.cpp  cudacnnMex.vcproj  cudacnnMex.vcxproj  matlab_import_export.cpp  matlab_tools.cpp  precomp.hpp
mexFunction/src/: cudacnnMex.cpp  matlab_import_export.cpp  matlab_import_export.h  matlab_tools.cpp  mexcnnconfig.h  precomp.cpp  precomp.hpp
mexFunction/tests/: subdir.mk
tests/: CMakeLists.txt  Tests.vcproj  Tests.vcxproj  Tests.vcxproj.filters  clayer_biases.csv  clayer_outs.csv  clayer_rand_inp.csv  clayer_tests.cpp  clayer_weights.csv  cudacnn_test.cpp  digit_image_preproc.csv  flayer_biases.csv  flayer_inputs.csv  flayer_outputs.csv  flayer_tests.cpp  flayer_weights.csv  hdf5writeAttribute.m  hdf5writeCustom.m  perf_tests.cpp  player_tests.cpp  precomp.cpp  precomp.h  save_cnet_to_hdf5.m  tensor_tests.cpp  test_clayer.m  test_mnist_net.h5  test_norb_net.h5  tests_common.h  training_tests.cpp
tools/: CMakeLists.txt  hdf5tobin.cpp
